--- a/styles/style.css
+++ b/styles/style.css
@@ -11,10 +11,37 @@ a {
     border: none;
 }
 
-.logo {
+.logo-img {
     width: 148px; 
     /* в фигме высота лого в шапке 105, в папке лежит высотой 114, оставила 114 */
     line-height: 0;
+}
+
+.overlay {
+    position: absolute;
+    z-index: -1;
+
+    background-color: #000;
+    opacity: 60%;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+}
+
+.button {
+    /* общие стили объединила в реюзабельный класс, потому что кнопки, как правило, повторяются по стилю и в других блоках, хоть сейчас здесь она только одна, не бейте плз  */
+    font-size: 22px;
+    background: none;
+    border: 1px solid #fff;
+    color: #fff;
+    padding: 12px 31px;
+    text-transform: uppercase;
+}
+
+.section__heading {
+    font-size: 40px;
+    text-transform: uppercase;
 }
 
 /* Header */
@@ -45,26 +72,195 @@ a {
     margin-right: 32px;  
 }
 
+.header__contacts {
+    justify-self: self-end;
+}
+
 .contacts {
     font-style: normal;
     line-height: 24.3px;
-    justify-self: self-end;
+    
 }
 
 /* Main */
 
-
-
 /* Cover */
 
+.cover {
+    position: relative;
+    padding: 165px 50px 51px 50px;
+    background-image: url(/images/cover.jpg);
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    color: #fff;
+    text-transform: uppercase;
+    z-index: 1;
+    margin-bottom: 179px;
+}
 
+.cover__heading {
+    font-size: 100px;
+    line-height: 110%;
+    margin-bottom: 135px;
+    line-height: 100%;
+}
+
+.cover__heading-span {
+    display: block;
+    letter-spacing: 2rem;
+}
+
+.cover__heading-span:first-child {
+    line-height: 115%;
+}
+
+.cover__heading-center {
+    text-align: center;
+}
+
+.cover__heading-right {
+    text-align: right;
+}
+
+.cover__heading-spacing-big {
+    letter-spacing: 3rem;
+}
+
+.cover__heading-spacing-zero {
+    letter-spacing: 0;
+}
+
+.cover__subline {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.cover__subline-text {
+    padding-left: 28px;
+    font-size: 22px;
+    word-spacing: 28px;
+}
 
 /* Lots */
 
+.lots__heading {
+    margin-bottom: 27px;
+    padding-left: 64px;
+}
 
+.lots__list {
+    list-style: none;
+    display: flex;
+    gap: 25px;
+    padding: 0 24px;
+    margin-bottom: 30px;
+}
+
+.lots__list-item {
+    flex-basis: 0;
+    flex-grow: 1;
+    position: relative;
+    z-index: 1;
+    color: #fff;
+    flex-direction: column;
+    padding: 51px 40px 48px; 
+    line-height: 120%;
+    background-size: cover;
+    background-position: center;
+}
+
+.lots__list-item-lot {
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+    justify-content: space-between;
+}
+
+.lot__heading {
+    font-size: 20px;
+    border-color: #fff;
+    text-transform: uppercase;
+    letter-spacing: 0;
+}
+
+.lots__andersson {
+    background-image: url(/images/card-lot-01.jpg);
+}
+
+.lots__ulisses {
+    background-image: url(/images/card-lot-02.jpg);
+}
+
+.lots__kandinsky {
+    background-image: url(/images/card-lot-03.jpg);
+}
+
+.lot__description {
+    display: block;
+}
+
+.lots__show-more {
+    margin-left: 64px;
+    line-height: normal;
+}
 
 /* About */
 
+.about {
+    display: flex;
+    padding: 180px 24px 180px 71px;
+    gap: 72px;
+}
 
+.about__logo {
+    background-color: #000;
+    padding: 60px 46px;
+    height: 100%;
+    border-radius: 50%;
+}
+
+.about__description {
+    padding-top: 98px;
+}
+
+.about__heading {
+    margin-bottom: 100px;
+}
+
+.about__text:not(:last-child) {
+    margin-bottom: 24px;
+}
 
 /* Footer */
+
+.footer {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    padding: 0 50px;
+    margin-bottom: 88px;
+    font-size: 18px;
+    justify-content: space-between;
+}
+
+.footer__list {
+    list-style: none;
+    text-align: center;
+}
+
+.footer__socials-list {
+    display: flex;
+    list-style: none;
+    gap: 48px;
+    justify-content: flex-end;
+}
+
+.footer__socials-list-item {
+    width: 48px;
+    height: 48px;
+}
+
+.footer__socials-link {
+    border: none;
+}
