--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,10 @@ a {
     border: none;
 }
 
+.logo {
+    border: none;
+}
+
 .logo-img {
     width: 148px; 
     /* в фигме высота лого в шапке 105, в папке лежит высотой 114, оставила 114 */
@@ -32,7 +36,7 @@ a {
 .button {
     /* общие стили объединила в реюзабельный класс, потому что кнопки, как правило, повторяются по стилю и в других блоках, хоть сейчас здесь она только одна, не бейте плз  */
     font-size: 22px;
-    background: none;
+    background: transparent;
     border: 1px solid #fff;
     color: #fff;
     padding: 12px 31px;
@@ -64,7 +68,7 @@ a {
     border: none;
 }
 
-.header__list-item:not(:first-child){
+.header__list-item:not(:first-child) {
     list-style: circle;
 }
 
@@ -103,7 +107,6 @@ a {
     font-size: 100px;
     line-height: 110%;
     margin-bottom: 135px;
-    line-height: 100%;
 }
 
 .cover__heading-span {
@@ -123,7 +126,7 @@ a {
     text-align: right;
 }
 
-.cover__heading-spacing-big {
+.cover__heading-spacing-extended {
     letter-spacing: 3rem;
 }
 
@@ -156,11 +159,14 @@ a {
     gap: 25px;
     padding: 0 24px;
     margin-bottom: 30px;
+    flex-wrap: wrap;
 }
 
 .lots__list-item {
     flex-basis: 0;
     flex-grow: 1;
+    min-width: 334px;
+    min-height: 563px;
     position: relative;
     z-index: 1;
     color: #fff;
@@ -174,7 +180,7 @@ a {
 .lots__list-item-lot {
     display: flex;
     flex-direction: column;
-    min-height: 100%;
+    height: 100%;
     justify-content: space-between;
 }
 
@@ -185,15 +191,15 @@ a {
     letter-spacing: 0;
 }
 
-.lots__andersson {
+.lots__film {
     background-image: url(/images/card-lot-01.jpg);
 }
 
-.lots__ulisses {
+.lots__book {
     background-image: url(/images/card-lot-02.jpg);
 }
 
-.lots__kandinsky {
+.lots__picture {
     background-image: url(/images/card-lot-03.jpg);
 }
 
