--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,7 @@ body {
     font-size: 20px;
 }
 
-a { 
+a {
     text-decoration: none;
     border-bottom: 1px solid #000;
 }
@@ -13,13 +13,9 @@ a {
 
 .logo {
     border: none;
-}
-
-.logo-img {
-    width: 148px; 
-    /* в фигме высота лого в шапке 105, в папке лежит высотой 114, оставила 114 */
     line-height: 0;
 }
+
 
 .overlay {
     position: absolute;
@@ -64,20 +60,28 @@ a {
     text-decoration: none;
 }
 
+.header__list-item {
+    margin-right: 30px;
+}
+
 .header__list-item.active a {
     border: none;
 }
 
 .header__list-item:not(:first-child) {
     list-style: circle;
+    padding-left: 4px;
 }
 
-.header__list-item:not(:last-child) {
-    margin-right: 32px;  
+.header__logo {
+    width: 136px;
+    height: 109px;
+    justify-self: center;
 }
 
 .header__contacts {
     justify-self: self-end;
+    padding-right: 37px;
 }
 
 .contacts {
@@ -93,7 +97,7 @@ a {
 .cover {
     position: relative;
     padding: 165px 50px 51px 50px;
-    background-image: url(/images/cover.jpg);
+    background-image: url(../images/cover.jpg);
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
@@ -105,13 +109,14 @@ a {
 
 .cover__heading {
     font-size: 100px;
-    line-height: 110%;
+    line-height: 100%;
     margin-bottom: 135px;
 }
 
 .cover__heading-span {
     display: block;
-    letter-spacing: 2rem;
+    letter-spacing: 1.9rem;
+    margin-bottom: 20px;
 }
 
 .cover__heading-span:first-child {
@@ -120,6 +125,7 @@ a {
 
 .cover__heading-center {
     text-align: center;
+    margin-left: -26px;
 }
 
 .cover__heading-right {
@@ -127,7 +133,7 @@ a {
 }
 
 .cover__heading-spacing-extended {
-    letter-spacing: 3rem;
+    letter-spacing: 3.7rem;
 }
 
 .cover__heading-spacing-zero {
@@ -143,7 +149,7 @@ a {
 .cover__subline-text {
     padding-left: 28px;
     font-size: 22px;
-    word-spacing: 28px;
+    word-spacing: 19px;
 }
 
 /* Lots */
@@ -171,7 +177,7 @@ a {
     z-index: 1;
     color: #fff;
     flex-direction: column;
-    padding: 51px 40px 48px; 
+    padding: 51px 40px 48px;
     line-height: 120%;
     background-size: cover;
     background-position: center;
@@ -192,15 +198,15 @@ a {
 }
 
 .lots__film {
-    background-image: url(/images/card-lot-01.jpg);
+    background-image: url(../images/card-lot-01.jpg);
 }
 
 .lots__book {
-    background-image: url(/images/card-lot-02.jpg);
+    background-image: url(../images/card-lot-02.jpg);
 }
 
 .lots__picture {
-    background-image: url(/images/card-lot-03.jpg);
+    background-image: url(../images/card-lot-03.jpg);
 }
 
 .lot__description {
