--- a/styles/style.css
+++ b/styles/style.css
@@ -1,93 +1,94 @@
 body {
-    font-size: 20px;
+  font-size: 20px;
 }
 
 a {
-    text-decoration: none;
-    border-bottom: 1px solid #000;
+  text-decoration: none;
+  border-bottom: 1px solid #000;
 }
 
 .active {
-    border: none;
+  border: none;
 }
 
 .logo {
-    border: none;
-    line-height: 0;
+  border: none;
+  line-height: 0;
 }
 
-
 .overlay {
-    position: absolute;
-    z-index: -1;
+  position: absolute;
+  z-index: -1;
 
-    background-color: #000;
-    opacity: 60%;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
+  background-color: #000;
+  opacity: 60%;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
 }
 
 .button {
-    /* общие стили объединила в реюзабельный класс, потому что кнопки, как правило, повторяются по стилю и в других блоках, хоть сейчас здесь она только одна, не бейте плз  */
-    font-size: 22px;
-    background: transparent;
-    border: 1px solid #fff;
-    color: #fff;
-    padding: 12px 31px;
-    text-transform: uppercase;
+  /* общие стили объединила в реюзабельный класс, потому что кнопки, как правило, повторяются по стилю и в других блоках, хоть сейчас здесь она только одна, не бейте плз  */
+  font-size: 22px;
+  background: transparent;
+  border: 1px solid #fff;
+  color: #fff;
+  padding: 12px 31px;
+  text-transform: uppercase;
 }
 
 .section__heading {
-    font-size: 40px;
-    text-transform: uppercase;
+  font-size: 40px;
+  text-transform: uppercase;
 }
 
 /* Header */
 
 .header {
-    padding: 92px 50px;
-    display: grid;
-    grid-template-columns: 1fr 148px 1fr;
-    font-size: 18px;
-    align-items: center;
+  padding: 92px 50px;
+  display: grid;
+  grid-template-columns: 1fr 148px 1fr;
+  font-size: 18px;
+  align-items: center;
 }
 
 .header__list {
-    display: flex;
-    list-style: none;
-    text-decoration: none;
+  display: flex;
+  list-style: none;
+  text-decoration: none;
 }
 
 .header__list-item {
-    margin-right: 30px;
+  margin-right: 30px;
 }
 
 .header__list-item.active a {
-    border: none;
+  border: none;
 }
 
 .header__list-item:not(:first-child) {
-    list-style: circle;
-    padding-left: 4px;
+  list-style: circle;
+  padding-left: 4px;
 }
 
 .header__logo {
-    width: 136px;
-    height: 109px;
-    justify-self: center;
+  justify-self: center;
+}
+
+.header__logo-img {
+  width: 136px;
+  height: 109px;
 }
 
 .header__contacts {
-    justify-self: self-end;
-    padding-right: 37px;
+  justify-self: self-end;
+  padding-right: 37px;
 }
 
 .contacts {
-    font-style: normal;
-    line-height: 24.3px;
-    
+  font-style: normal;
+  line-height: 24.3px;
 }
 
 /* Main */
@@ -95,184 +96,197 @@ a {
 /* Cover */
 
 .cover {
-    position: relative;
-    padding: 165px 50px 51px 50px;
-    background-image: url(../images/cover.jpg);
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-    color: #fff;
-    text-transform: uppercase;
-    z-index: 1;
-    margin-bottom: 179px;
+  position: relative;
+  padding: 165px 50px 51px 50px;
+  background-image: url(../images/cover.jpg);
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  color: #fff;
+  text-transform: uppercase;
+  z-index: 1;
+  margin-bottom: 179px;
 }
 
 .cover__heading {
-    font-size: 100px;
-    line-height: 100%;
-    margin-bottom: 135px;
+  font-size: 100px;
+  line-height: 100%;
+  margin-bottom: 135px;
 }
 
 .cover__heading-span {
-    display: block;
-    letter-spacing: 1.9rem;
-    margin-bottom: 20px;
+  display: block;
+  letter-spacing: 1.9rem;
+  margin-bottom: 20px;
 }
 
 .cover__heading-span:first-child {
-    line-height: 115%;
+  line-height: 115%;
 }
 
 .cover__heading-center {
-    text-align: center;
-    margin-left: -26px;
+  text-align: center;
+  margin-left: -26px;
 }
 
 .cover__heading-right {
-    text-align: right;
+  text-align: right;
 }
 
 .cover__heading-spacing-extended {
-    letter-spacing: 3.7rem;
+  letter-spacing: 3.7rem;
 }
 
 .cover__heading-spacing-zero {
-    letter-spacing: 0;
+  letter-spacing: 0;
 }
 
 .cover__subline {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .cover__subline-text {
-    padding-left: 28px;
-    font-size: 22px;
-    word-spacing: 19px;
+  padding-left: 28px;
+  font-size: 22px;
+  word-spacing: 19px;
 }
 
 /* Lots */
 
 .lots__heading {
-    margin-bottom: 27px;
-    padding-left: 64px;
+  margin-bottom: 26px;
+  padding-left: 64px;
 }
 
 .lots__list {
-    list-style: none;
-    display: flex;
-    gap: 25px;
-    padding: 0 24px;
-    margin-bottom: 30px;
-    flex-wrap: wrap;
+  list-style: none;
+  display: flex;
+  gap: 25px;
+  padding: 0 24px;
+  margin-bottom: 30px;
+  flex-wrap: wrap;
 }
 
 .lots__list-item {
-    flex-basis: 0;
-    flex-grow: 1;
-    min-width: 334px;
-    min-height: 563px;
-    position: relative;
-    z-index: 1;
-    color: #fff;
-    flex-direction: column;
-    padding: 51px 40px 48px;
-    line-height: 120%;
-    background-size: cover;
-    background-position: center;
+  flex-basis: 0;
+  flex-grow: 1;
+  min-width: 334px;
+  min-height: 563px;
+  position: relative;
+  z-index: 1;
+  color: #fff;
+  padding: 51px 40px 48px;
+  line-height: 120%;
+  background-size: cover;
+  background-position: center;
 }
 
 .lots__list-item-lot {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  justify-content: space-between;
 }
 
 .lot__heading {
-    font-size: 20px;
-    border-color: #fff;
-    text-transform: uppercase;
-    letter-spacing: 0;
+  font-size: 20px;
+  border-color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 1.4px;
+  line-height: 1.3;
 }
 
 .lots__film {
-    background-image: url(../images/card-lot-01.jpg);
+  background-image: url(../images/card-lot-01.jpg);
 }
 
 .lots__book {
-    background-image: url(../images/card-lot-02.jpg);
+  background-image: url(../images/card-lot-02.jpg);
 }
 
 .lots__picture {
-    background-image: url(../images/card-lot-03.jpg);
+  background-image: url(../images/card-lot-03.jpg);
 }
 
 .lot__description {
-    display: block;
+  display: block;
 }
 
 .lots__show-more {
-    margin-left: 64px;
-    line-height: normal;
+  margin-left: 64px;
+  line-height: normal;
 }
 
 /* About */
 
 .about {
-    display: flex;
-    padding: 180px 24px 180px 71px;
-    gap: 72px;
+  display: flex;
+  padding: 182px 24px 180px 71px;
+  gap: 72px;
 }
 
 .about__logo {
-    background-color: #000;
-    padding: 60px 46px;
-    height: 100%;
-    border-radius: 50%;
+  background-color: #000;
+  padding: 63px 46px;
+  height: 100%;
+  border-radius: 50%;
+}
+
+.about__logo-img {
+  width: 148px;
+  height: 114px;
 }
 
 .about__description {
-    padding-top: 98px;
+  padding-top: 100px;
 }
 
 .about__heading {
-    margin-bottom: 100px;
+  margin-bottom: 101px;
+}
+
+.about__text {
+  letter-spacing: 0.007em;
 }
 
 .about__text:not(:last-child) {
-    margin-bottom: 24px;
+  margin-bottom: 24px;
+}
+
+.about__text:last-child {
+  letter-spacing: 0.002em;
 }
 
 /* Footer */
 
 .footer {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    padding: 0 50px;
-    margin-bottom: 88px;
-    font-size: 18px;
-    justify-content: space-between;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  padding: 0 50px;
+  margin-bottom: 88px;
+  font-size: 18px;
+  justify-content: space-between;
 }
 
 .footer__list {
-    list-style: none;
-    text-align: center;
+  list-style: none;
+  text-align: center;
 }
 
 .footer__socials-list {
-    display: flex;
-    list-style: none;
-    gap: 48px;
-    justify-content: flex-end;
+  display: flex;
+  list-style: none;
+  gap: 48px;
+  justify-content: flex-end;
 }
 
 .footer__socials-list-item {
-    width: 48px;
-    height: 48px;
+  width: 48px;
+  height: 48px;
 }
 
 .footer__socials-link {
-    border: none;
+  border: none;
 }
