--- a/styles/style.css
+++ b/styles/style.css
@@ -88,7 +88,7 @@ a {
 
 .contacts {
   font-style: normal;
-  line-height: 24.3px;
+  line-height: 1.37;
 }
 
 /* Main */
@@ -97,7 +97,7 @@ a {
 
 .cover {
   position: relative;
-  padding: 165px 50px 51px 50px;
+  padding: 165px 50px 50px;
   background-image: url(../images/cover.jpg);
   background-size: cover;
   background-position: center center;
@@ -150,13 +150,13 @@ a {
 .cover__subline-text {
   padding-left: 28px;
   font-size: 22px;
-  word-spacing: 19px;
+  word-spacing: 0.84em;
 }
 
 /* Lots */
 
 .lots__heading {
-  margin-bottom: 26px;
+  margin-bottom: 27px;
   padding-left: 64px;
 }
 
@@ -216,7 +216,6 @@ a {
 
 .lots__show-more {
   margin-left: 64px;
-  line-height: normal;
 }
 
 /* About */
@@ -241,21 +240,20 @@ a {
 
 .about__description {
   padding-top: 100px;
+  display: flex;
+  flex-direction: column;
+  gap: 101px;
 }
 
-.about__heading {
-  margin-bottom: 101px;
-}
-
-.about__text {
+.about__text-item {
   letter-spacing: 0.007em;
 }
 
-.about__text:not(:last-child) {
+.about__text-item:not(:last-child) {
   margin-bottom: 24px;
 }
 
-.about__text:last-child {
+.about__text-item:last-child {
   letter-spacing: 0.002em;
 }
 
