--- a/styles/global.css
+++ b/styles/global.css
@@ -8,6 +8,7 @@ body {
   width: 1100px;
   margin: 0 auto;
   font-family: Raleway, sans-serif;
+  font-size: 20px;
 }
 
 h1,
@@ -27,6 +28,8 @@ blockquote {
 
 a {
   color: inherit;
+  text-decoration: none;
+  border-bottom: 1px solid #000;
 }
 
 img {
