--- a/styles/style.css
+++ b/styles/style.css
@@ -1,11 +1,4 @@
-body {
-  font-size: 20px;
-}
-
-a {
-  text-decoration: none;
-  border-bottom: 1px solid #000;
-}
+/* Переиспользуемые стили */
 
 .active {
   border: none;
@@ -19,7 +12,6 @@ a {
 .overlay {
   position: absolute;
   z-index: -1;
-
   background-color: #000;
   opacity: 60%;
   width: 100%;
@@ -36,6 +28,8 @@ a {
   color: #fff;
   padding: 12px 31px;
   text-transform: uppercase;
+  font-family: Raleway, sans-serif;
+  cursor: pointer;
 }
 
 .section__heading {
@@ -81,12 +75,12 @@ a {
   height: 109px;
 }
 
-.header__contacts {
+.header__address {
   justify-self: self-end;
   padding-right: 37px;
 }
 
-.contacts {
+.address {
   font-style: normal;
   line-height: 1.37;
 }
@@ -177,25 +171,31 @@ a {
   position: relative;
   z-index: 1;
   color: #fff;
-  padding: 51px 40px 48px;
+  padding: 52px 40px 47px;
   line-height: 120%;
   background-size: cover;
   background-position: center;
 }
 
-.lots__list-item-lot {
-  display: flex;
-  flex-direction: column;
+.lots__list-link {
+  display: block;
   height: 100%;
+  border: none;
+}
+
+.lots__card {
+  display: flex;
+  height: 100%;
+  flex-direction: column;
   justify-content: space-between;
 }
 
-.lot__heading {
-  font-size: 20px;
-  border-color: #fff;
+.card__heading {
+  text-decoration: underline;
+  text-underline-offset: 3px;
+  font-size: 22px;
   text-transform: uppercase;
-  letter-spacing: 1.4px;
-  line-height: 1.3;
+  line-height: 1.18;
 }
 
 .lots__film {
@@ -210,7 +210,7 @@ a {
   background-image: url(../images/card-lot-03.jpg);
 }
 
-.lot__description {
+.card__description {
   display: block;
 }
 
